--- a/exodo/index.html
+++ b/exodo/index.html
@@ -7,9 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1, height=device-height">
 	<meta http-equiv="cleartype" content="on">
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700|Merriweather:300" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="../style.css">
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script type="text/javascript" src="js/functions.js"></script>
+    <script type="text/javascript" src="../js/functions.js"></script>
 </head>
 <body>
 	<!--[if lt IE 9]>
@@ -53,6 +53,6 @@
 		</section>
 		<iframe src="https://www.youtube.com/embed/w6eMU_tw6hY" frameborder="0" allowfullscreen></iframe>
     </article>
-    <script type='text/javascript' src='js/plugins.js'></script>
+    <script type='text/javascript' src='../js/plugins.js'></script>
 </body>
 </html>
