--- a/crimen_cdmx/loret-crimencdmx.html
+++ b/crimen_cdmx/loret-crimencdmx.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1, height=device-height">
 	<meta http-equiv="cleartype" content="on">
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700|Merriweather:300" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="style-crimencdmx.css">
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="../js/functions.js"></script>
 </head>
