--- a/trump/index.html
+++ b/trump/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>#EnTuCaraTRUMP</title>
+	<meta name="description" content="#EnTuCaraTrump es un una recopilación de opiniones para apoyar a las comunidades latinas en E.U. a levantar la voz y exigir el respeto que merecemos."/>
 	<link rel="shortcut icon" href="http://i2.esmas.com/finalpage/favicon/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1, height=device-height">
