--- a/trump/index.html
+++ b/trump/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>#EnTuCaraTRUMP</title>
 	<meta name="description" content="#EnTuCaraTrump es un una recopilación de opiniones para apoyar a las comunidades latinas en E.U. a levantar la voz y exigir el respeto que merecemos."/>
-	<link rel="shortcut icon" href="http://i2.esmas.com/finalpage/favicon/favicon.ico">
+	<link rel="shortcut icon" href="favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1, height=device-height">
 	<meta http-equiv="cleartype" content="on">
@@ -52,7 +52,7 @@
 		</section>
 		
 		<section class="especial">
-			<iframe  id="iframe" width="560" height="315" src="https://www.youtube.com/embed/d9G5Kj0tk48" frameborder="0" allowfullscreen></iframe>	
+			<iframe  id="iframe" width="560" height="315" src="https://www.youtube.com/embed/L0RPxjunrPw" frameborder="0" allowfullscreen></iframe>	
 			<script type="text/javascript">
 
 			var data = "";
@@ -61,6 +61,7 @@
 			  url: 'https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=48&playlistId=PLmZsiRvDGLtdaUARDrfPbuJoL19Fvyqgn&key=AIzaSyAYPHS4-q4xeQiUteFTIL8HUId7Q9Tf82k',
 			  data: data,
 			  success: function success(data) {
+			  	$('.grid.latinas').append('<div class="grid_item clearfix latinas" data="L0RPxjunrPw"><img src="http://img.youtube.com/vi/L0RPxjunrPw/0.jpg" /></div>');
 			  	$('.grid.latinas').append('<div class="grid_item clearfix latinas" data="d9G5Kj0tk48"><img src="http://img.youtube.com/vi/d9G5Kj0tk48/0.jpg" /></div>');
 			  	console.log(data);
 			  	$.each( data.items, function( key, value ) {
@@ -122,6 +123,8 @@
 
 				<blockquote class="twitter-tweet clearfix" data-lang="en"><p lang="es" dir="ltr">Trump no debió pisar México. Lo escucho ahora contra los inmigrantes. Nunca ha estado más clara la esencia fascista de nuestro &quot;amigo&quot;.</p>&mdash; Enrique Krauze (@EnriqueKrauze) <a href="https://twitter.com/EnriqueKrauze/status/771175526371168257">September 1, 2016</a></blockquote>
 				
+				<blockquote class="twitter-tweet" data-lang="es"><p lang="en" dir="ltr">The Economist | KAL’s cartoon<a href="https://t.co/KEbqmMW5oJ">https://t.co/KEbqmMW5oJ</a> via <a href="https://twitter.com/TheEconomist">@TheEconomist</a></p>&mdash; Leo Zuckermann (@leozuckermann) <a href="https://twitter.com/leozuckermann/status/787709097017651200">16 de octubre de 2016</a></blockquote>
+
 				<blockquote class="twitter-tweet clearfix" data-lang="en"><p lang="es" dir="ltr">Trump es la síntesis más perfecta de un troll en Internet.</p>&mdash; José Merino (@PPmerino) <a href="https://twitter.com/PPmerino/status/785296036080197632">October 10, 2016</a></blockquote>
 
 				<blockquote class="twitter-tweet" data-lang="en"><p lang="es" dir="ltr">Es imposible que Donald Trump tenga autoridad ninguna con ese peinado que se hace.</p>&mdash; Elena Poniatowska (@Eponiatowska) <a href="https://twitter.com/Eponiatowska/status/614947084505116672">June 28, 2015</a></blockquote>
