--- a/trump/index.html
+++ b/trump/index.html
@@ -2,12 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>#EnTuCaraTRUMP</title>
+	<title>#EnTuCaraTrump</title>
 	<meta name="description" content="#EnTuCaraTrump es un una recopilación de opiniones para apoyar a las comunidades latinas en E.U. a levantar la voz y exigir el respeto que merecemos."/>
 	<link rel="shortcut icon" href="favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1, height=device-height">
 	<meta http-equiv="cleartype" content="on">
+	<meta property="og:url"                content="http://noticieros.televisa.com/infografia/en-tu-cara-trump/" />
+	<meta property="og:type"               content="article" />
+	<meta property="og:title"              content="#EnTuCaraTrump" />
+	<meta property="og:description"        content="#EnTuCaraTrump es un una recopilación de opiniones para apoyar a las comunidades latinas en E.U. a levantar la voz y exigir el respeto que merecemos." />
+	<meta property="og:image"              content="http://noticieros.televisa.com/infografia/en-tu-cara-trump/images/trump.jpg" />
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700|Merriweather:300,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
