--- a/trump/index.html
+++ b/trump/index.html
@@ -37,9 +37,10 @@
 		<section>
 		<nav class="share">
 			<ins>COMPARTE<br><br></ins>
-			<a class="fb" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.entucaratrump.com','Compartir en Facebook','width=600,height=400')"></a>
+			<a class="fb" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fnoticieros.televisa.com/infografia/en-tu-cara-trump/','Compartir en Facebook','width=600,height=400')"></a>
 			<a class="tw" onclick="window.open('https://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.entucaratrump.com&text=%23entucaratrump','Compartir en Twitter','width=600,height=400')"></a>
-			<a class="wp" href="whatsapp://send?text=#entucaratrump http://www.entucaratrump.com" data-action="share/whatsapp/share"></a>
+			<a class="wp" href="whatsapp://send" data-text="#entucaratrump http://www.entucaratrump.com" data-href=""></a>
+			
 		</nav>
 			<p>El último debate entre los candidatos a la presidencia de Estados Unidos, Hillary Clinton y Donald Trump, tendrá lugar este 19 de octubre, a unos días de las votaciones que se celebrarán el 8 de noviembre. Desde el inicio de su campaña, Donald Trump ha sostenido un discurso que vulnera a la comunidad latina y a otras minorías y ha prometido que, de ganar la contienda, las medidas serán más radicales.</p>
 			<p>El discurso violento no es la única arma de Trump. También se vale de la mentira sistemática. De acuerdo con el proyecto ganador del Pulitzer, Politifact, que contrasta las afirmaciones de importantes agentes políticos con datos reales, al menos el 70% de las afirmaciones de Trump son falsas o descontextualizadas.</p>
