--- a/elections/elections.html
+++ b/elections/elections.html
@@ -1148,6 +1148,11 @@
 		
 			<p class="pie">Nullam laoreet, purus at accumsan aliquam, odio ligula condimentum lacus, auctor euismod metus lectus nec <a href="">TORTOR</a></p>
 		</section>
+
+		<section id="read_json">
+			
+		</section>
+
 		<footer>
 			<div class="clearfix">
 				<a href="http://noticieros.televisa.com/" target="new"><img class="clearfix" src="images/noti.png"></a>
