--- a/elections/elections.html
+++ b/elections/elections.html
@@ -26,7 +26,7 @@
 	<div class="overscreen">
 		<div class="rotate">
 			<img src="images/rotate.png">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+			<p>Lorem ipsum dolor sit amet consectetur adiscplicing elit</p>
 		</div>
 	</div>
 	<article>
@@ -74,11 +74,26 @@
 				<a class="tw" onclick="window.open('https://twitter.com/intent/tweet?url= &text=','Compartir en Twitter','width=600,height=400')"></a>
 				<a class="wp" href="whatsapp://send" data-text="Lorem ipsum dolor sit amet" data-href=""></a>
 			</nav>
-			<h1><u>Lorem ipsum dolor</u>: Sit amet consectetur adipiscing elit</h1>
-			<p class="subtitle">Donec eget luctus velit. Morbi interdum tortor nec felis cursus, inesen malesuada ipsum aliquet. Donec pulvinar commodored tortor consectetur.</p>
-			<p>Nulla pretium dignissim finibus. Suspendisse non erat at metus malesuada facilisis eu quis diam. Morbi eget posuere quam, in scelerisque lectus. Integer placerat leo nisi, feugiat viverra nisl tristique sit amet. <a href="">Morbi libero magna</a>, vestibulum sed arcu ut, posuere semper est. In dapibus, nulla sed finibus interdum, arcu metus blandit erat, et maximus sapien velit ac massa. Proin egestas, ex a tincidunt rhoncus, augue augue pretium augue, in semper orci tellus nec eros. <strong>Class aptent taciti sociosqu ad litora torquent per conubia nostra</strong>, per inceptos himenaeos. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+			<h1><u>ELECCIONES EUA </u>: 2016</h1>
+			<p>
+				Este 8 de noviembre del 2016 se llevan a cabo las elecciones presidenciales en Estados Unidos. La demócrata Hillary Clinton y el republicano Donald Trump son los principales candidatos en esta reñida contienda. No se trata de un único proceso, la Unión Americana tiene en realidad 50 procesos electorales, uno por cada estado, y otro más en el Distrito de Columbia.
+			</p>
+			<p>
+				El proceso electoral en Estados Unidos no es directo, sino indirecto. Cada estado realiza una elección en la que los ciudadanos depositan un voto personal en las urnas, también llamado <strong>voto popular.</strong> Asimismo, cada estado emite un número determinado de <strong>votos electorales,</strong> que puedes pensar como puntos en disputa. Juntos, los votos electorales de todos los estados y el distrito de Columbia suman 538. El ganador de la votación popular en cada estado obtiene todos los votos electorales que, de acuerdo con la densidad de población, cada estado puede otorgarle. <strong>Para ser presidente,</strong> un candidato debe obtener al menos <strong>el 50% de todos todos los votos electorales más uno, es decir, 270.</strong>
+			</p>
+			<p>
+				A lo largo de este micrositio encontrarás la información más reciente en torno al proceso electoral en cada estado. También encontrará un amplio conjunto de artículos y material audiovisual que te ayudarán a comprender la campaña de este 2016 así como la historia y la mecánica del sistema político estadounidense. 
+			</p>
+
+			<p class="subtitle">El sistema electoral de Estados Unidos en menos de un minuto.</p>
+			
+			<p></p>
+			<p></p>
+			
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/QXgxApEp7xU" frameborder="0" allowfullscreen></iframe>
-			<p>In hac habitasse platea dictumst. Integer accumsan viverra lectus eget posuere. Donec mauris felis, blandit quis sodales a, congue sed turpis. <strong>Donec aliquet, <a href="">nisl eu ullamcorper</a> egestas</strong>, nisl risus hendrerit arcu, sit amet placerat ligula lectus eu ex. Vivamus nec volutpat diam. Maecenas a malesuada ex. Fusce magna nisi, fermentum sit amet leo vitae, dapibus rhoncus dolor.</p>
+
+			<p></p>
+
 		</section>	
 
 		<div id="map1">
@@ -250,44 +265,7 @@
 			<div class="grid clearfix contexto"></div>
 			<h2>BREAKING NEWS</h2>
 			<div class="grid clearfix breaking"></div>
-			<ul class="notas">
-				<li class="clearfix">
-					<a href="">
-						<div class="img_frame">
-							<img src="images/uno.png">
-						</div>
-					</a>
-					<h5><a href="">Laoreet eu iaculis quis, euismod semper velit</a></h5>
-					<span class="_time">12 horas</span>
-				</li>
-				<li class="clearfix">
-					<a href="">
-						<div class="img_frame">
-							<img src="images/uno.png">
-						</div>
-					</a>
-					<h5><a href="">Laoreet eu iaculis quis, euismod semper velit</a></h5>
-					<span class="_time">12 horas</span>
-				</li>
-				<li class="clearfix">
-					<a href="">
-						<div class="img_frame">
-							<img src="images/uno.png">
-						</div>
-					</a>
-					<h5><a href="">Laoreet eu iaculis quis, euismod semper velit</a></h5>
-					<span class="_time">12 horas</span>
-				</li>
-				<li class="clearfix">
-					<a href="">
-						<div class="img_frame">
-							<img src="images/uno.png">
-						</div>
-					</a>
-					<h5><a href="">Laoreet eu iaculis quis, euismod semper velit</a></h5>
-					<span class="_time">12 horas</span>
-				</li>
-			</ul>
+			
 			<h2>Laoreet eu iaculis quis, euismod semper velit</h2>
 			<ul>
 				<li>Nullam sit amet augue vitae ex sagittis pulvinar. <a href="">Mauris tincidunt maximus</a> turpis, sed laoreet ipsum pretium id. Phasellus at convallis lacus. Duis ac nulla at purus ultrices dignissim sit amet ac erat. Sed nec blandit risus, at venenatis quam.</li>
@@ -1245,11 +1223,15 @@
 			</div>
 		
 			<p class="pie">Nullam laoreet, purus at accumsan aliquam, odio ligula condimentum lacus, auctor euismod metus lectus nec <a href="">TORTOR</a></p>
+
+
+			<ul class="notas">
+				
+			</ul>
+
 		</section>
 
-		<section id="read_json">
-			
-		</section>
+
 
 		<footer>
 			<div class="clearfix">
