--- a/elections/elections.html
+++ b/elections/elections.html
@@ -75,6 +75,7 @@
 				<a class="wp" href="whatsapp://send" data-text="Lorem ipsum dolor sit amet" data-href=""></a>
 			</nav>
 			<h1><u>ELECCIONES EUA </u>: 2016</h1>
+			<p class="subtitle">El sistema electoral de Estados Unidos en menos de un minuto.</p>
 			<p>
 				Este 8 de noviembre del 2016 se llevan a cabo las elecciones presidenciales en Estados Unidos. La demócrata Hillary Clinton y el republicano Donald Trump son los principales candidatos en esta reñida contienda. No se trata de un único proceso, la Unión Americana tiene en realidad 50 procesos electorales, uno por cada estado, y otro más en el Distrito de Columbia.
 			</p>
@@ -85,10 +86,11 @@
 				A lo largo de este micrositio encontrarás la información más reciente en torno al proceso electoral en cada estado. También encontrará un amplio conjunto de artículos y material audiovisual que te ayudarán a comprender la campaña de este 2016 así como la historia y la mecánica del sistema político estadounidense. 
 			</p>
 
-			<p class="subtitle">El sistema electoral de Estados Unidos en menos de un minuto.</p>
 			
-			<p></p>
-			<p></p>
+			<h2>¿Quién va ganando?</h2><br/>
+			<p>
+				El siguiente mapa muestra de manera detallada la repartición de los 538 votos electorales entre los 50 estados y el Distrito de Columbia. Da clic en un estado en el que aún no esté decidido un ganador y verás el número de votos electorales que se disputan ahí así como la hora de cierre de casillas. Asimismo, da clic en el un estado en el que ya se haya decidido un ganador para ver el número de votos populares emitidos en favor de cada contendiente, el número de votos electorales que ha ganado el vencedor y el peso que representan.
+			</p>
 			
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/QXgxApEp7xU" frameborder="0" allowfullscreen></iframe>
 
@@ -208,9 +210,10 @@
 		</div>
 
 		<section>	
-			<h2>Fusce ultrices rhoncus massa faucibus commodo</h2><br/>
-			<p>Donec pellentesque metus ut ligula volutpat, nec eleifend urna ullamcorper. <strong>Mauris vel metus sit</strong> amet sem scelerisque placerat ac id enim. Nullam et ipsum nisl. Aenean eget ante vestibulum, interdum enim fringilla, porttitor sem. Nunc vitae malesuada libero. <i>Suspendisse potenti.</i> Mauris sodales, tortor eget sollicitudin condimentum, <a href="">diam est dapibus justo</a>, a iaculis nisl purus vel urna. Nam dapibus turpis feugiat magna mattis, at sagittis mi maximus.</p>
-			<p>Vestibulum in pulvinar lectus. Donec fringilla nibh at est gravida ultricies. <i>Proin bibendum metus vitae sapien dignissim tincidunt.</i> Mauris eleifend facilisis ligula, vel sagittis ligula feugiat ut. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. <strong>Fusce hendrerit erat non purus auctor viverra.</strong></p>
+			<!-- <h2>Fusce ultrices rhoncus massa faucibus commodo</h2><br/> -->
+			<p>
+				El siguiente mapa presenta una versión geográficamente deformada de una Unión Americana, según el peso electoral de cada estado. Cada hexágono representa un voto electoral. Da clic sobre cada estado para conocer el número de votos electorales en disputa (si los comicios no han terminado) o bien, el número de votos electorales que ha obtenido el vencedor de cada entidad. 
+			</p>
 			<iframe  id="iframe" width="560" height="315" src="https://www.youtube.com/embed/Qrc2HKgYTnw" frameborder="0" allowfullscreen></iframe>	
 			<script type="text/javascript">
 
@@ -266,7 +269,9 @@
 			<h2>BREAKING NEWS</h2>
 			<div class="grid clearfix breaking"></div>
 			
-			<h2>Laoreet eu iaculis quis, euismod semper velit</h2>
+			<h2>Sigue el proceso electoral minuto a minuto</h2>
+
+			<!--
 			<ul>
 				<li>Nullam sit amet augue vitae ex sagittis pulvinar. <a href="">Mauris tincidunt maximus</a> turpis, sed laoreet ipsum pretium id. Phasellus at convallis lacus. Duis ac nulla at purus ultrices dignissim sit amet ac erat. Sed nec blandit risus, at venenatis quam.</li>
 				<li>Aliquam sagittis, lectus ac blandit mattis, ligula purus porta dui, ac sagittis tellus nisi vitae nisl. In et est fermentum, semper nulla vitae, congue ante. Morbi ut rhoncus leo. Vivamus quis ultricies ligula. Quisque neque elit.</li>
@@ -275,7 +280,8 @@
 			<ol>
 				<li>Aliquam sagittis, lectus ac blandit mattis, <strong>ligula purus porta dui, ac sagittis tellus</strong> nisi vitae nisl. In et est fermentum, semper nulla vitae, congue ante.</li>
 				<li>Nullam eget pretium enim. Phasellus maximus eu leo vel tincidunt. Nunc vitae arcu tempor, convallis leo vel, efficitur quam.</li>
-			</ol>
+			</ol>-->
+
 		</section>
 
 		<div id="map2">
@@ -1198,9 +1204,13 @@
 		</div>
 
 		<section>	
-			<h2>Fusce ultrices rhoncus massa faucibus commodo</h2><br/>
-			<p>Donec pellentesque metus ut ligula volutpat, nec eleifend urna ullamcorper. <strong>Mauris vel metus sit</strong> amet sem scelerisque placerat ac id enim. Nullam et ipsum nisl.</p>
-			<p>Aenean eget ante vestibulum, interdum enim fringilla, porttitor sem. Nunc vitae malesuada libero. <i>Suspendisse potenti.</i> Mauris sodales, tortor eget sollicitudin condimentum, <a href="">diam est dapibus justo</a>, a iaculis nisl purus vel urna. Nam dapibus turpis feugiat magna mattis, at sagittis mi maximus.</p>
+			<h2>¿Quién va ganando?</h2><br/>
+			<p>
+				La siguiente gráfica muestra el número de votos electorales que ha obtenido cada candidato hasta el momento. Entre más cerca estén las barras rojas y azul del número 270, más cerca está el candidato de obtener la presidencia de Estados Unidos. 
+			</p>
+			<p>
+				Da clic sobre cada barra, o bien, sobre el espacio gris, para obtener información detallada sobre los estados y votos electorales obtenidos por cada candidato hasta el momento. El porcentaje representa qué tan cerca están de obtener el número de votos electorales necesarios para ser presidente. El 100% son 270 votos electorales. Un candidato puede obtener más del 100% de votos.
+			</p>
 			<div class="versus clearfix">
 				<div class="clearfix middle hc">
 					<img src="images/hc.svg">
@@ -1221,8 +1231,9 @@
 					<div class="barra"></div>
 				</div>
 			</div>
+			<p></p>
 		
-			<p class="pie">Nullam laoreet, purus at accumsan aliquam, odio ligula condimentum lacus, auctor euismod metus lectus nec <a href="">TORTOR</a></p>
+			<!-- <p class="pie">Nullam laoreet, purus at accumsan aliquam, odio ligula condimentum lacus, auctor euismod metus lectus nec <a href="">TORTOR</a></p> -->
 
 
 			<ul class="notas">
