--- a/elections/elections.html
+++ b/elections/elections.html
@@ -87,7 +87,7 @@
 			</p>
 
 			
-			<h2>¿Quién va ganando?</h2><br/>
+			<h2>¿Quién gana en cada estado?</h2><br/>
 			<p>
 				El siguiente mapa muestra de manera detallada la repartición de los 538 votos electorales entre los 50 estados y el Distrito de Columbia. Da clic en un estado en el que aún no esté decidido un ganador y verás el número de votos electorales que se disputan ahí así como la hora de cierre de casillas. Asimismo, da clic en el un estado en el que ya se haya decidido un ganador para ver el número de votos populares emitidos en favor de cada contendiente, el número de votos electorales que ha ganado el vencedor y el peso que representan.
 			</p>
