--- a/elections/elections.html
+++ b/elections/elections.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1, height=device-height">
 	<meta http-equiv="cleartype" content="on">
-	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700|Merriweather:300,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,700|Merriweather:300,700|Roboto:900" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style-elections.css">
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
@@ -74,10 +74,9 @@
 				<a class="tw" onclick="window.open('https://twitter.com/intent/tweet?url= &text=','Compartir en Twitter','width=600,height=400')"></a>
 				<a class="wp" href="whatsapp://send" data-text="Lorem ipsum dolor sit amet" data-href=""></a>
 			</nav>
-			<h1><u>ELECCIONES EUA</u>: 2016</h1>
-			<p class="subtitle">El sistema electoral de Estados Unidos en menos de un minuto.</p>
+			<h1>ELECCIONES EUA 2016</h1>
 			<p>
-				Este 8 de noviembre del 2016 se llevan a cabo las elecciones presidenciales en Estados Unidos. La demócrata Hillary Clinton y el republicano Donald Trump son los principales candidatos en esta reñida contienda. No se trata de un único proceso, la Unión Americana tiene en realidad 50 procesos electorales, uno por cada estado, y otro más en el Distrito de Columbia.
+				Este 8 de noviembre del 2016 se llevan a cabo las elecciones presidenciales en Estados Unidos. La <strong>demócrata Hillary Clinton</strong> y el <strong>republicano Donald Trump</strong> son los principales candidatos en esta reñida contienda. No se trata de un único proceso, la Unión Americana tiene en realidad 50 procesos electorales, uno por cada estado, y otro más en el Distrito de Columbia.
 			</p>
 			<p>
 				El proceso electoral en Estados Unidos no es directo, sino indirecto. Cada estado realiza una elección en la que los ciudadanos depositan un voto personal en las urnas, también llamado <strong>voto popular.</strong> Asimismo, cada estado emite un número determinado de <strong>votos electorales,</strong> que puedes pensar como puntos en disputa. Juntos, los votos electorales de todos los estados y el distrito de Columbia suman 538. El ganador de la votación popular en cada estado obtiene todos los votos electorales que, de acuerdo con la densidad de población, cada estado puede otorgarle. <strong>Para ser presidente,</strong> un candidato debe obtener al menos <strong>el 50% de todos todos los votos electorales más uno, es decir, 270.</strong>
@@ -85,15 +84,35 @@
 			<p>
 				A lo largo de este micrositio encontrarás la información más reciente en torno al proceso electoral en cada estado. También encontrará un amplio conjunto de artículos y material audiovisual que te ayudarán a comprender la campaña de este 2016 así como la historia y la mecánica del sistema político estadounidense. 
 			</p>
+			<h2 class="secc_title">El sistema electoral de Estados Unidos en menos de un minuto</h2>
+			<div class="versus clearfix">
+				<div class="clearfix middle hc">
+					<img src="images/hc.svg">
+					<div class="stats">
+						<h5>100%</h5>
+						<span><strong>270</strong> VOTOS ELECTORALES</span>
+						<h3>HILLARY CLINTON</h3>
+					</div>
+					<div class="barra"></div>
+				</div>
+				<div class="clearfix middle dt">
+					<img src="images/dt.svg">
+					<div class="stats">
+						<h5>100%</h5>
+						<span><strong>270</strong> VOTOS ELECTORALES</span>
+						<h3>DONALD TRUMP</h3>
+					</div>
+					<div class="barra"></div>
+				</div>
+			</div>
 			<h2 class="secc_title">¿Quién va ganando?</h2>
 			<p>
-				El siguiente mapa muestra de manera detallada la repartición de los 538 votos electorales entre los 50 estados y el Distrito de Columbia. Da clic en un estado en el que aún no esté decidido un ganador y verás el número de votos electorales que se disputan ahí así como la hora de cierre de casillas. Asimismo, da clic en el un estado en el que ya se haya decidido un ganador para ver el número de votos populares emitidos en favor de cada contendiente, el número de votos electorales que ha ganado el vencedor y el peso que representan.
+				La siguiente gráfica muestra el número de votos electorales que ha obtenido cada candidato hasta el momento. Entre más cerca estén las barras rojas y azul del número 270, más cerca está el candidato de obtener la presidencia de Estados Unidos.
 			</p>
-			
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/QXgxApEp7xU" frameborder="0" allowfullscreen></iframe>
-
-			<p></p>
-
+			<p>
+				Da clic sobre cada barra, o bien, sobre el espacio gris, para obtener información detallada sobre los estados y votos electorales obtenidos por cada candidato hasta el momento. El porcentaje representa qué tan cerca están de obtener el número de votos electorales necesarios para ser presidente. El 100% son 270 votos electorales. Un candidato puede obtener más del 100% de votos.
+			</p>
+			<h2 class="secc_title">¿Quién gana en cada estado?</h2>
 		</section>	
 
 		<div id="map1">
@@ -208,78 +227,9 @@
 		</div>
 
 		<section>	
-			<!-- <h2>Fusce ultrices rhoncus massa faucibus commodo</h2><br/> -->
 			<p>
-				El siguiente mapa presenta una versión geográficamente deformada de una Unión Americana, según el peso electoral de cada estado. Cada hexágono representa un voto electoral. Da clic sobre cada estado para conocer el número de votos electorales en disputa (si los comicios no han terminado) o bien, el número de votos electorales que ha obtenido el vencedor de cada entidad. 
+				El siguiente mapa muestra de manera detallada la repartición de los 538 votos electorales entre los 50 estados y el Distrito de Columbia. Da clic en un estado en el que aún no esté decidido un ganador y verás el número de votos electorales que se disputan ahí así como la hora de cierre de casillas. Asimismo, da clic en el un estado en el que ya se haya decidido un ganador para ver el número de votos populares emitidos en favor de cada contendiente, el número de votos electorales que ha ganado el vencedor y el peso que representan.
 			</p>
-			<iframe  id="iframe" width="560" height="315" src="https://www.youtube.com/embed/Qrc2HKgYTnw" frameborder="0" allowfullscreen></iframe>	
-			<script type="text/javascript">
-
-			var data = "";
-
-			$.ajax({
-			  url: 'https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=50&playlistId=PLmZsiRvDGLtcEnJBzrxt11W1Jo6aT-Drl&key=AIzaSyAYPHS4-q4xeQiUteFTIL8HUId7Q9Tf82k',
-			  data: data,
-			  success: function success(data) {
-			  	console.log(data);
-			  	$.each( data.items, function( key, value ) {
-			  		if (key==0) {
-			  			var title = value.snippet.title;
-				  		var imagen = value.snippet.thumbnails.high.url;
-				  		var v_id = value.snippet.resourceId.videoId;
-				  		$('.grid.contexto').append('<div class="grid_item clearfix" data="'+v_id+'"><img src="'+imagen+'" /></div>');
-			  		} else {
-				  		var title = value.snippet.title;
-				  		var imagen = value.snippet.thumbnails.high.url;
-				  		var v_id = value.snippet.resourceId.videoId;
-				  		$('.grid.contexto').append('<div class="grid_item clearfix" data="'+v_id+'"><img src="'+imagen+'" /></div>');
-			  		}
-			  	});
-			  },
-			  dataType: 'json'
-			});
-
-			$.ajax({
-			  url: 'https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=50&playlistId=PLmZsiRvDGLtd8q6CD_ad-VRAR_Br60Ruz&key=AIzaSyAYPHS4-q4xeQiUteFTIL8HUId7Q9Tf82k',
-			  data: data,
-			  success: function success(data) {
-			  	console.log(data);
-			  	$.each( data.items, function( key, value ) {
-			  		if (key==0) {
-			  			var title = value.snippet.title;
-				  		var imagen = value.snippet.thumbnails.high.url;
-				  		var v_id = value.snippet.resourceId.videoId;
-				  		$('.grid.breaking').append('<div class="grid_item clearfix" data="'+v_id+'"><img src="'+imagen+'" /></div>');
-			  		} else {
-				  		var title = value.snippet.title;
-				  		var imagen = value.snippet.thumbnails.high.url;
-				  		var v_id = value.snippet.resourceId.videoId;
-				  		$('.grid.breaking').append('<div class="grid_item clearfix" data="'+v_id+'"><img src="'+imagen+'" /></div>');
-			  		}
-			  	});
-			  },
-			  dataType: 'json'
-			});
-				
-			</script>
-			<h2>CONTEXTO</h2>
-			<div class="grid clearfix contexto"></div>
-			<h2>BREAKING NEWS</h2>
-			<div class="grid clearfix breaking"></div>
-			
-			<h2>Sigue el proceso electoral minuto a minuto</h2>
-
-			<!--
-			<ul>
-				<li>Nullam sit amet augue vitae ex sagittis pulvinar. <a href="">Mauris tincidunt maximus</a> turpis, sed laoreet ipsum pretium id. Phasellus at convallis lacus. Duis ac nulla at purus ultrices dignissim sit amet ac erat. Sed nec blandit risus, at venenatis quam.</li>
-				<li>Aliquam sagittis, lectus ac blandit mattis, ligula purus porta dui, ac sagittis tellus nisi vitae nisl. In et est fermentum, semper nulla vitae, congue ante. Morbi ut rhoncus leo. Vivamus quis ultricies ligula. Quisque neque elit.</li>
-			</ul>
-			<h2>Laoreet eu iaculis quis, euismod semper velit</h2>
-			<ol>
-				<li>Aliquam sagittis, lectus ac blandit mattis, <strong>ligula purus porta dui, ac sagittis tellus</strong> nisi vitae nisl. In et est fermentum, semper nulla vitae, congue ante.</li>
-				<li>Nullam eget pretium enim. Phasellus maximus eu leo vel tincidunt. Nunc vitae arcu tempor, convallis leo vel, efficitur quam.</li>
-			</ol>-->
-
 		</section>
 
 		<div id="map2">
@@ -1200,48 +1150,69 @@
 			  </g>
 			</svg>
 		</div>
+		<script type="text/javascript">
 
+			var data = "";
+
+			$.ajax({
+			  url: 'https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=50&playlistId=PLmZsiRvDGLtcEnJBzrxt11W1Jo6aT-Drl&key=AIzaSyAYPHS4-q4xeQiUteFTIL8HUId7Q9Tf82k',
+			  data: data,
+			  success: function success(data) {
+			  	console.log(data);
+			  	$.each( data.items, function( key, value ) {
+			  		if (key==0) {
+			  			var title = value.snippet.title;
+				  		var imagen = value.snippet.thumbnails.high.url;
+				  		var v_id = value.snippet.resourceId.videoId;
+				  		$('.grid.contexto').append('<div class="grid_item clearfix" data="'+v_id+'"><img src="'+imagen+'" /></div>');
+			  		} else {
+				  		var title = value.snippet.title;
+				  		var imagen = value.snippet.thumbnails.high.url;
+				  		var v_id = value.snippet.resourceId.videoId;
+				  		$('.grid.contexto').append('<div class="grid_item clearfix" data="'+v_id+'"><img src="'+imagen+'" /></div>');
+			  		}
+			  	});
+			  },
+			  dataType: 'json'
+			});
+
+			$.ajax({
+			  url: 'https://www.googleapis.com/youtube/v3/playlistItems?part=snippet&maxResults=50&playlistId=PLmZsiRvDGLtd8q6CD_ad-VRAR_Br60Ruz&key=AIzaSyAYPHS4-q4xeQiUteFTIL8HUId7Q9Tf82k',
+			  data: data,
+			  success: function success(data) {
+			  	console.log(data);
+			  	$.each( data.items, function( key, value ) {
+			  		if (key==0) {
+			  			var title = value.snippet.title;
+				  		var imagen = value.snippet.thumbnails.high.url;
+				  		var v_id = value.snippet.resourceId.videoId;
+				  		$('.grid.breaking').append('<div class="grid_item clearfix" data="'+v_id+'"><img src="'+imagen+'" /></div>');
+			  		} else {
+				  		var title = value.snippet.title;
+				  		var imagen = value.snippet.thumbnails.high.url;
+				  		var v_id = value.snippet.resourceId.videoId;
+				  		$('.grid.breaking').append('<div class="grid_item clearfix" data="'+v_id+'"><img src="'+imagen+'" /></div>');
+			  		}
+			  	});
+			  },
+			  dataType: 'json'
+			});
+			
+		</script>
 		<section>	
-			<h2>¿Quién va ganando?</h2>
 			<p>
-				La siguiente gráfica muestra el número de votos electorales que ha obtenido cada candidato hasta el momento. Entre más cerca estén las barras rojas y azul del número 270, más cerca está el candidato de obtener la presidencia de Estados Unidos. 
+				El siguiente mapa presenta una versión geográficamente deformada de una Unión Americana, según el peso electoral de cada estado. Cada hexágono representa un voto electoral. Da clic sobre cada estado para conocer el número de votos electorales en disputa (si los comicios no han terminado) o bien, el número de votos electorales que ha obtenido el vencedor de cada entidad.
 			</p>
+			<h2 class="secc_title">Sigue el proceso electoral<br>minuto a minuto</h2>
+			<ul class="notas"></ul>
+			<div class="grid clearfix breaking"></div>
+			<h2 class="secc_title">Elecciones EUA 2016 a profundidad</h2>
+			<div class="grid clearfix contexto"></div>
 			<p>
-				Da clic sobre cada barra, o bien, sobre el espacio gris, para obtener información detallada sobre los estados y votos electorales obtenidos por cada candidato hasta el momento. El porcentaje representa qué tan cerca están de obtener el número de votos electorales necesarios para ser presidente. El 100% son 270 votos electorales. Un candidato puede obtener más del 100% de votos.
+				Encuentra en los siguientes artículos información pormenorizada sobre la mecánica del proceso electoral en Estados Unidos, la historia de su sistema político y el contexto para comprender la cerrada contienda de este 2016.
 			</p>
-			<div class="versus clearfix">
-				<div class="clearfix middle hc">
-					<img src="images/hc.svg">
-					<div class="stats">
-						<h5>100%</h5>
-						<span><strong>270</strong> VOTOS ELECTORALES</span>
-						<h3>HILLARY CLINTON</h3>
-					</div>
-					<div class="barra"></div>
-				</div>
-				<div class="clearfix middle dt">
-					<img src="images/dt.svg">
-					<div class="stats">
-						<h5>100%</h5>
-						<span><strong>270</strong> VOTOS ELECTORALES</span>
-						<h3>DONALD TRUMP</h3>
-					</div>
-					<div class="barra"></div>
-				</div>
-			</div>
-			<p></p>
-		
-			<!-- <p class="pie">Nullam laoreet, purus at accumsan aliquam, odio ligula condimentum lacus, auctor euismod metus lectus nec <a href="">TORTOR</a></p> -->
-
-
-			<ul class="notas">
-				
-			</ul>
-
+			<h2 class="secc_title">SIGUE LA CONVERSACIÓN<br>EN REDES SOCIALES</h2>
 		</section>
-
-
-
 		<footer>
 			<div class="clearfix">
 				<a href="http://noticieros.televisa.com/" target="new"><img class="clearfix" src="images/noti.png"></a>
