--- a/ahorro-en-juguetes-navidad-2016/index.html
+++ b/ahorro-en-juguetes-navidad-2016/index.html
@@ -40,6 +40,12 @@
 		<span>(AP Photo/Juan Karita)</span>
 		
 		<section>
+			<nav class="share">
+				<ins>COMPARTE<br><br></ins>
+				<a class="fb" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=http://noticieros.televisa.com/infografia/ahorro-en-juguetes-navidad-2016/','Compartir en Facebook','width=600,height=400')"></a>
+				<a class="tw" onclick="window.open('https://twitter.com/intent/tweet?url=http://noticieros.televisa.com/infografia/ahorro-en-juguetes-navidad-2016/&text=3 consejos para comprar juguetes en Navidad','Compartir en Twitter','width=600,height=400')"></a>
+				<a class="wp" href="whatsapp://send?text=http://noticieros.televisa.com/infografia/ahorro-en-juguetes-navidad-2016/" data-action="share/whatsapp/share"></a>
+			</nav>
 			<h1>Tres consejos para comprar juguetes esta Navidad y no endeudarte en el intento</h1>
 			<p><i>Una investigación del Laboratorio de Datos de FOROtv y OPI, Inteligencia Participativa</i></p>
 
