--- a/elections/elections.html
+++ b/elections/elections.html
@@ -1229,19 +1229,22 @@
 			<p>
 				Encuentra en los siguientes artículos y videos información pormenorizada sobre la mecánica del proceso electoral en Estados Unidos, la historia de su sistema político y el contexto para comprender la cerrada contienda de este 2016.
 			</p>
+			<h3>EN VIDEO</h3>
 			<iframe id="iframe" width="560" height="315" src="https://www.youtube.com/embed/e9waJKOMxpI" frameborder="0" allowfullscreen></iframe>
 			<div class="grid clearfix contexto"></div>
+			<h3>LONGREADS</h3>
+			<h3>NOTAS CORTAS</h3>
 			<ul class="notas_nt">
 				
 				<!-- 1 -->
-				<li class="clearfix">
+				<!-- <li class="clearfix">
 					<a href="#">
 						<div class="img_frame">
 							<img src="">
 						</div>
 					</a>
 					<div class="_info"><h5><a href="#">Llegó el día</a></h5></div>
-				</li>
+				</li> -->
 				<!-- 2 -->
 				<li class="clearfix">
 					<a href="http://noticieros.televisa.com/mundo/2016-11-07/que-eleccion-presidencial-eu-es-martes/">
