--- a/elections/elections.html
+++ b/elections/elections.html
@@ -1232,8 +1232,43 @@
 			<h3>EN VIDEO</h3>
 			<iframe id="iframe" width="560" height="315" src="https://www.youtube.com/embed/e9waJKOMxpI" frameborder="0" allowfullscreen></iframe>
 			<div class="grid clearfix contexto"></div>
-			<h3>LONGREADS</h3>
-			<h3>NOTAS CORTAS</h3>
+			<h2 class="secc_title">LONGREADS</h2>
+			<ul class="notas_nt">
+				<li class="clearfix">
+					<a href="https://medium.com/panorama-noticieros/las-otras-elecciones-5f78c60cfa99#.30uhe0usz">
+						<div class="img_frame">
+							<img src="https://d262ilb51hltx0.cloudfront.net/max/2000/1*VcjD47258lYDumjZWV4qsQ.jpeg">
+						</div>
+					</a>
+					<div class="_info"><h5><a href="https://medium.com/panorama-noticieros/las-otras-elecciones-5f78c60cfa99#.30uhe0usz">Las otras elecciones</a></h5></div>
+				</li>
+				<li class="clearfix">
+					<a href="https://medium.com/panorama-noticieros/lo-bueno-lo-malo-y-lo-incierto-si-hillary-clinton-alcanza-la-presidencia-81efcf8e3200#.8qme73en9">
+						<div class="img_frame">
+							<img src="https://d262ilb51hltx0.cloudfront.net/max/2000/1*L8Svg2NDNtssX7vVDe3OFg.jpeg">
+						</div>
+					</a>
+					<div class="_info"><h5><a href="https://medium.com/panorama-noticieros/lo-bueno-lo-malo-y-lo-incierto-si-hillary-clinton-alcanza-la-presidencia-81efcf8e3200#.8qme73en9">Los bueno, lo malo y lo incierto de Hillary</a></h5></div>
+				</li>
+				<li class="clearfix">
+					<a href="https://medium.com/panorama-noticieros/el-sistema-electoral-de-estados-unidos-explicado-en-2-minutos-53a08e5bad40#.e0k4emv3v">
+						<div class="img_frame">
+							<img src="https://d262ilb51hltx0.cloudfront.net/max/2000/1*o8GQRoA3IF_xjDxkeqr31A.jpeg">
+						</div>
+					</a>
+					<div class="_info"><h5><a href="https://medium.com/panorama-noticieros/el-sistema-electoral-de-estados-unidos-explicado-en-2-minutos-53a08e5bad40#.e0k4emv3v">El sistema electoral de Estados Unidos explicado en 3 minutos</a></h5></div>
+				</li>
+				<li class="clearfix">
+					<a href="https://medium.com/panorama-noticieros/cuatro-promesas-que-donald-trump-no-puede-cumplir-f43fb953c74f#.rcf1ar3hh">
+						<div class="img_frame">
+							<img src="https://d262ilb51hltx0.cloudfront.net/max/2000/1*vUpiNHXwMV66GtYyRLfmyw.jpeg">
+						</div>
+					</a>
+					<div class="_info"><h5><a href="https://medium.com/panorama-noticieros/cuatro-promesas-que-donald-trump-no-puede-cumplir-f43fb953c74f#.rcf1ar3hh">Cuatro promesas que Donald Trump no puede cumplir</a></h5></div>
+				</li>
+			</ul>	
+
+			<h2 class="secc_title">NOTAS CORTAS</h2>
 			<ul class="notas_nt">
 				
 				<!-- 1 -->
